tests/negative/gold/block8_test.gold
tests/negative/block8_test.toit:5:17: error: Unresolved identifier: 'unresolved'
  print (b.size unresolved)
                ^~~~~~~~~~
tests/negative/block8_test.toit:5:11: error: Can't invoke size on a block
  print (b.size unresolved)
          ^
tests/negative/block8_test.toit:6:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
